# Mortal

./: .gitattributes  .gitignore  .tokeignore  404.html  CNAME  Cargo.toml  Dockerfile  README.md  contributors_sponsors.html  donate.html  environment.yml  index.html  print.html  searchindex.js  searchindex.json  typos.toml  update_debug_lib.sh  update_lib.sh
.github/workflows/: docker.yml  docs.yml  libriichi.yml
docs/: .gitignore  book.toml
docs/css/: extra.css  sidebar.css
docs/src/: SUMMARY.md  contributors_sponsors.md  donate.md  index.md
docs/src/online/: index.md
docs/src/perf/: strength.md
docs/src/ref/: meta.md  references.md
docs/src/user/: build.md  docker.md
docs/theme/: index.hbs
exe-wrapper/: Cargo.toml
exe-wrapper/src/: main.rs
libriichi/: Cargo.toml  build.rs
libriichi/benches/: bench.rs
libriichi/src/: array.rs  chi_type.rs  consts.rs  hand.rs  lib.rs  macros.rs  mjai.rs  mjai_api.rs  mjai_bot.rs  py_helper.rs  rankings.rs  stat.rs  tile.rs  vec_ops.rs
libriichi/src/agent/: akochan.rs  batchify.rs  defs.rs  mjai_log.rs  mod.rs  mortal.rs  py_agent.rs  traits.rs  tsumogiri.rs
libriichi/src/algo/: agari.rs  mod.rs  point.rs  shanten.rs
libriichi/src/algo/data/: uradora_prob_table.txt
libriichi/src/algo/sp/: calc.rs  candidate.rs  mod.rs  shanten_cache.rs  state.rs  tile.rs
libriichi/src/arena/: board.rs  game.rs  mod.rs  one_vs_three.rs  result.rs  two_vs_two.rs
libriichi/src/dataset/: gameplay.rs  grp.rs  invisible.rs  mod.rs  player_list.rs
libriichi/src/mjai/: bot.rs  event.rs  mod.rs
libriichi/src/state/: action.rs  agent_helper.rs  getter.rs  item.rs  mod.rs  obs_repr.rs  player_state.rs  sp_tables.rs  test.rs  update.rs
log-viewer/: README.md  index.example.html
log-viewer/files/css/: style.css
log-viewer/files/images/: README.txt
log-viewer/files/js/: archive_player.js  dytem.js
mortal/: boot-aliyun.py  client.py  common.py  config.example.toml  config.py  dataloader.py  engine.py  gen.py  lr_scheduler.py  model.py  mortal  mortal.py  net_emit.py  one_vs_three.py  player.py  player_online.py  prelude.py  reset_bestperf.py  reward_calculator.py  rotate.py  server.py  tmux-resume.sh  tmux-start-ps.sh  tmux-start-worker.sh  tmux-start.sh  tmux-stop.sh  torch_tools.py  train.py  train_grp.py  train_no_oracle.py  train_no_oracle_no_tqdm.py
mortal/archived/: train_v1.py  train_v2.py
online/: index.html
perf/: strength.html
ref/: meta.html  references.html
user/: build.html  docker.html
