[package]
name = "libriichi"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[lib]
name = "riichi"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1"
log = "0.4"
pyo3-log = "0.8"
once_cell = "1"
serde_json = "1"
boomphf = "0.6"
byteorder = "1"
rayon = "1"
ndarray = "0.15"
numpy = "0.20"
serde_with = "3"
derive_more = "0.99"
rand = "0.8"
rand_chacha = "0.3"
flate2 = "1"
sha3 = "0.10"
glob = "0.3"
derivative = "2"
ahash = "0.8"
parking_lot = "0.12"
crossbeam = "0.8"
pyo3 = { version = "0.20", features = ["auto-initialize", "multiple-pymethods", "anyhow"] }
indicatif = { version = "0.17", features = ["rayon"] }
tinyvec = { version = "1", features = ["alloc", "serde", "rustc_1_57"] }
serde = { version = "1", features = ["derive"] }
mimalloc = { version = "0.1", default-features = false, optional = true }

[build-dependencies]
pyo3-build-config = "0.20"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "bench"
harness = false

[features]
default = ["pymod", "dep:mimalloc"]
pymod = ["pyo3/extension-module"]
abi3 = ["pyo3/abi3"]
sp_reproduce_cpp_ver = []
